fixed booking functionality and other stuff
